crates/dsql-core/tests/it/snapshots/it__sql__singular_roots_and_relations_render_nullable_object_envelopes.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: render_sql(&bowl).await
---
-- SingularShapes
select
  "root_0"."by_limit" as "by_limit",
  "root_1"."by_key" as "by_key",
  "root_2"."runtime" as "runtime",
  "root_3"."flat_id" as "flat_id",
  "root_3"."flat_title" as "flat_title"
from
  (
    select
      "root"."by_limit" as "by_limit"
    from
      (
        select
          1) as "singleton"
      left join LATERAL (
        select
          JSON_BUILD_OBJECT(
            'id',
            "by_limit_31385e1f"."id",
            'title',
            "by_limit_31385e1f"."title"
          ) as "by_limit"
        from
          "public"."title" as "by_limit_31385e1f"
        order by
          "by_limit_31385e1f"."id" asc
        limit
          1
      ) as "root" on true
  ) as "root_0"
  cross join (
    select
      "root"."by_key" as "by_key"
    from
      (
        select
          1) as "singleton"
      left join LATERAL (
        select
          JSON_BUILD_OBJECT(
            'id',
            "by_key_e6eec04b"."id",
            'latest_info',
            "latest_info_json_9fb9d44e"."latest_info_result_9fb9d44e"
          ) as "by_key"
        from
          "public"."title" as "by_key_e6eec04b"
          left join LATERAL (
            select
              JSON_BUILD_OBJECT(
                'id',
                "latest_info_9fb9d44e"."id",
                'info',
                "latest_info_9fb9d44e"."info"
              ) as "latest_info_result_9fb9d44e"
            from
              "public"."movie_info" as "latest_info_9fb9d44e"
            where
              "latest_info_9fb9d44e"."movie_id" = "by_key_e6eec04b"."id"
            order by
              "latest_info_9fb9d44e"."id" desc
            limit
              1
          ) as "latest_info_json_9fb9d44e" on true
        where
          "by_key_e6eec04b"."id" = ($1)
      ) as "root" on true
  ) as "root_1"
  cross join (
    select
      COALESCE(
        JSON_AGG(JSON_BUILD_OBJECT('id', "runtime_8d1f47ea"."id")),
        '[]'
      ) as "runtime"
    from
      (
        select
          *
        from
          "public"."title" as "runtime_8d1f47ea"
        limit
          LEAST(COALESCE($2, 10), 10)
      ) as "runtime_8d1f47ea"
  ) as "root_2"
  cross join (
    select
      "root"."flat_id" as "flat_id",
      "root"."flat_title" as "flat_title"
    from
      (
        select
          1) as "singleton"
      left join LATERAL (
        select
          TO_JSON("title_d4d9f554"."id") as "flat_id",
          TO_JSON("title_d4d9f554"."title") as "flat_title"
        from
          "public"."title" as "title_d4d9f554"
        where
          "title_d4d9f554"."id" = ($3)
      ) as "root" on true
  ) as "root_3"
-- parameters: params.id, params.count, params.flat_id
