crates/dsql-core/tests/it/snapshots/it__sql__valid_collection_and_pagination_defaults_survive_every_binding_shape.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: render_sql(&bowl).await
---
-- posts
select
  COALESCE(
    JSON_AGG(JSON_BUILD_OBJECT('id', "posts_ed412d1c"."id")),
    '[]'
  ) as "posts"
from
  (
    select
      *
    from
      "public"."posts" as "posts_ed412d1c"
    where
      (not ($1 is not null))
      or ("posts_ed412d1c"."id" = ANY($1))
    limit
      LEAST(COALESCE($2, 10), 10) offset $3
  ) as "posts_ed412d1c"
-- parameters: params.ids, params.limit, params.offset

-- users
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'posts',
        "posts_json_9b3bd304"."posts_result_9b3bd304"
      )
    ),
    '[]'
  ) as "users"
from
  (
    select
      *
    from
      "public"."users" as "users_99fc7350"
    limit
      10
  ) as "users_99fc7350"
  left join LATERAL (
    select
      COALESCE(
        JSON_AGG(JSON_BUILD_OBJECT('id', "posts_9b3bd304"."id")),
        '[]'
      ) as "posts_result_9b3bd304"
    from
      (
        select
          *
        from
          "public"."posts" as "posts_9b3bd304"
        where
          "posts_9b3bd304"."user_id" = "users_99fc7350"."id"
          and ("posts_9b3bd304"."id" = ANY($1))
        limit
          LEAST(COALESCE($2, 10), 10) offset $3
      ) as "posts_9b3bd304"
  ) as "posts_json_9b3bd304" on true
-- parameters: input.users.body.DefaultWindow.params.ids, input.users.body.DefaultWindow.params.limit, input.users.body.DefaultWindow.params.offset

-- users
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'posts',
        "posts_json_9b3bd304"."posts_result_9b3bd304"
      )
    ),
    '[]'
  ) as "users"
from
  (
    select
      *
    from
      "public"."users" as "users_99fc7350"
    limit
      10
  ) as "users_99fc7350"
  left join LATERAL (
    select
      COALESCE(
        JSON_AGG(JSON_BUILD_OBJECT('id', "posts_9b3bd304"."id")),
        '[]'
      ) as "posts_result_9b3bd304"
    from
      (
        select
          *
        from
          "public"."posts" as "posts_9b3bd304"
        where
          "posts_9b3bd304"."user_id" = "users_99fc7350"."id"
          and ("posts_9b3bd304"."id" = ANY($1))
        limit
          LEAST(COALESCE($2, 10), 10) offset $3
      ) as "posts_9b3bd304"
  ) as "posts_json_9b3bd304" on true
-- parameters: params.ids, params.limit, params.offset

-- users
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'posts',
        "posts_json_9b3bd304"."posts_result_9b3bd304"
      )
    ),
    '[]'
  ) as "users"
from
  (
    select
      *
    from
      "public"."users" as "users_99fc7350"
    limit
      10
  ) as "users_99fc7350"
  left join LATERAL (
    select
      COALESCE(
        JSON_AGG(JSON_BUILD_OBJECT('id', "posts_9b3bd304"."id")),
        '[]'
      ) as "posts_result_9b3bd304"
    from
      (
        select
          *
        from
          "public"."posts" as "posts_9b3bd304"
        where
          "posts_9b3bd304"."user_id" = "users_99fc7350"."id"
          and (
            "posts_9b3bd304"."id" in ('00000000-0000-0000-0000-000000000001')
          )
        limit
          LEAST(COALESCE($1, 10), 10) offset 2
      ) as "posts_9b3bd304"
  ) as "posts_json_9b3bd304" on true
-- parameters: params.limit
