crates/dsql-core/tests/it/snapshots/it__sql__variables_render_as_parameters_and_variants.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: render_sql(&bowl).await
---
-- users
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'id',
        "users_99fc7350"."id",
        'posts',
        "posts_json_9b3bd304"."posts_result_9b3bd304"
      )
      order by
        "users_99fc7350"."created_at" {{params.dir}}
    ),
    '[]'
  ) as "users"
from
  (
    select
      *
    from
      "public"."users" as "users_99fc7350"
    where
      ("users_99fc7350"."name" {{params.name_op}} $1)
      and "users_99fc7350"."id" = ($2)
    order by
      "users_99fc7350"."created_at" {{params.dir}}
    limit
      10 offset $3
  ) as "users_99fc7350"
  left join LATERAL (
    select
      COALESCE(
        JSON_AGG(
          JSON_BUILD_OBJECT('title', "posts_9b3bd304"."title")
        ),
        '[]'
      ) as "posts_result_9b3bd304"
    from
      (
        select
          *
        from
          "public"."posts" as "posts_9b3bd304"
        where
          "posts_9b3bd304"."user_id" = "users_99fc7350"."id"
        limit
          5
      ) as "posts_9b3bd304"
  ) as "posts_json_9b3bd304" on true
-- parameters: params.name, input.users.clause.where.id.tenant, input.users.clause.offset.skip
-- variant params.name_op: ===>=, like=>like
-- variant params.dir: asc=>asc, desc=>desc
